Add notification tests